<?xml version="1.0"?>
<package format="2">
  <name>turtlebot-path-planning</name>
  <version>0.0.0</version>
  <description>This package implements Multiple path planning techniques on Turtlebot 3.</description>

  <maintainer email="comdoleger1@gmail.com">Kane Ibrahima</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
